<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">K19 Pelada Scouts</string>
    <string name="action_settings">Settings</string>
    <string name="email_hint">E-mail</string>
    <string name="senha_hint">Senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="botao_novo_jogador">Novo Jogador</string>
    <string name="title_activity_novo_jogador">Novo Jogador</string>
    <string name="apelido_hint">Apelido</string>
    <string name="confirmacao_de_senha_hint">Confirmação de Senha</string>
    <string name="botao_cadastrar_jogador">Cadastrar Jogador</string>
    <string name="botao_ok">OK</string>
    <string name="jogador_apelido_validation_error">O apelido deve ter entre 2 e 20 caracteres</string>
    <string name="jogador_email_validation_error">O e-mail digitado não é válido</string>
    <string name="jogador_senha_validation_error">A senha deve ter entre 4 e 10 caracteres</string>
    <string name="jogador_confirmacao_de_senha_validation_error">A confirmação de senha não está correta</string>
    <string name="novo_jogador_loading_dialog_title">Novo Jogador</string>
    <string name="novo_jogador_loading_dialog_message">Cadastrando jogador&#8230;</string>
    <string name="login_loading_dialog_title">Entrar</string>
    <string name="login_loading_dialog_message">Autenticando&#8230;</string>
    <string name="no_network_dialog_message">Sem conexão. Deseja configurar as suas conexões?</string>
    <string name="title_activity_home">Home</string>
</resources>
